add structure, ignore _site

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -20,8 +20,9 @@ header:
 excerpt: "**Crafting effortless One-Pager Websites**"
 ---
 
-<section class="site-section alternative-color first-section" id="section-1">
+<section class="site-section alternative-color first-section" id="work">
 
+    <h1>Work</h1>
 </section>
 
 
@@ -37,8 +38,9 @@ excerpt: "**Crafting effortless One-Pager Websites**"
 
 
 
-<section class="site-section" id="section-2">
+<section class="site-section" id="personalbrand">
 
+    <h1>Personal Brand</h1>
 
 </section>
 
@@ -57,7 +59,9 @@ excerpt: "**Crafting effortless One-Pager Websites**"
 
 
 
-<section class="site-section alternative-color" id="section-3">
+<section class="site-section alternative-color" id="about">
+
+    <h1>About</h1>
 
 </section>
 
@@ -76,6 +80,8 @@ excerpt: "**Crafting effortless One-Pager Websites**"
 
 
 
-<section class="site-section" id="section-4">
+<section class="site-section" id="contact">
+
+    <h1>Contact</h1>
 
 </section>
