--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Welcome to OneFlow Jekyll Theme"
+title: "Building brands that connect"
 
 layout: page
 
@@ -10,19 +10,19 @@ header:
     overlay_filter: rgba(0, 0, 0, 0.6)
 
     actions:
-        - label: "Get Started"
-          url: https://github.com/perstarke-webdev/oneflow-jekyll-theme?tab=readme-ov-file#oneflow-jekyll-theme
-          blank: true
-        - label: "Download Theme"
-          url: /theme-download/oneflow-jekyll-theme.zip/
+        - label: "Let's talk"
+          url: #contact
+          blank: false
+        - label: "See my work"
+          url: "#work"
           blank: false
 
-excerpt: "**Crafting effortless One-Pager Websites**"
 ---
 
 <section class="site-section alternative-color first-section" id="work">
 
     <h1>Work</h1>
+
 </section>
 
 
