work section placeholders

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -19,11 +19,60 @@ header:
 
 ---
 
-<section class="site-section alternative-color first-section" id="work">
-
+<section class="site-section alternative-color first-section work-section" id="work">
     <h1>Work</h1>
+    <div class="work-grid">
 
+        <!-- Work Item 1 -->
+        <div class="work-item" style="background: linear-gradient(135deg, #d5c3a9, #98a5b8);">
+            <a href="https://example.com/project-1" target="_blank" rel="noopener noreferrer nofollow">
+                <div class="work-image-container">
+                    <img src="/assets/images/your-image-1.webp" alt="Project 1">
+                    <div class="work-image-overlay"></div>
+                    <div class="work-image-title">inBewegung</div>
+                </div>
+            </a>
+            <div class="work-info">
+                <h3>Visual Rebrand – inBewegung</h3>
+                <p>A bold visual identity rooted in movement and emotion. Full concept, shoot, and edits by me.</p>
+            </div>
+        </div>
+
+        <!-- Work Item 2 -->
+        <div class="work-item" style="background: linear-gradient(135deg, #f7b4a4, #f4d36f);">
+            <a href="https://example.com/project-2" target="_blank" rel="noopener noreferrer nofollow">
+                <div class="work-image-container">
+                    <img src="/assets/images/your-image-2.webp" alt="Project 2">
+                    <div class="work-image-overlay"></div>
+                    <div class="work-image-title">Coaching Space</div>
+                </div>
+            </a>
+            <div class="work-info">
+                <h3>Content Strategy – Coaching Space</h3>
+                <p>Helping a coach connect with their audience through color, clarity, and story-driven video content.</p>
+            </div>
+        </div>
+
+        <!-- Work Item 3 -->
+        <div class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);" >
+            <a href="https://example.com/project-3" target="_blank" rel="noopener noreferrer nofollow">
+                <div class="work-image-container">
+                    <img src="/assets/images/your-image-3.webp" alt="Project 3">
+                    <div class="work-image-overlay"></div>
+                    <div class="work-image-title">Freiraum</div>
+                </div>
+            </a>
+            <div class="work-info">
+                <h3>Brand Launch – Freiraum</h3>
+                <p>From first shoot to final frames: a new brand presence for an emerging creative studio.</p>
+            </div>
+        </div>
+
+    </div>
+
+    <br><br>
 </section>
+
 
 
 
