start adding personal brand

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -91,6 +91,25 @@ header:
 
     <h1>Personal Brand</h1>
 
+    <p style="margin: 2rem 5vw;">
+        I’m building something real — and sharing the process.
+        From creative projects and client shoots to weekend getaways with friends, workouts, deep talks, and the moments that make life fun — my vlogs show more than just work.
+        I document the balance between building a business and actually living.
+        It’s raw, personal, sometimes chaotic – but always real.
+        Follow along for a look behind the scenes of creative growth, meaningful connections, and a life that’s built with intention.
+    </p>
+
+    <div class="video-row">
+        <div class="responsive-video-container">
+            <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="responsive-video-container">
+            <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+
+
+
 </section>
 
 
