--- a/_pages/index.html
+++ b/_pages/index.html
@@ -24,7 +24,7 @@ header:
     <div class="work-grid">
 
         <!-- Work Item 1 -->
-        <div class="work-item" style="background: linear-gradient(135deg, #d5c3a9, #98a5b8);">
+        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #d5c3a9, #98a5b8);">
             <a href="https://example.com/project-1" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
                     <img src="/assets/images/your-image-1.webp" alt="Project 1">
@@ -39,7 +39,7 @@ header:
         </div>
 
         <!-- Work Item 2 -->
-        <div class="work-item" style="background: linear-gradient(135deg, #f7b4a4, #f4d36f);">
+        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #f7b4a4, #f4d36f);">
             <a href="https://example.com/project-2" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
                     <img src="/assets/images/your-image-2.webp" alt="Project 2">
@@ -54,7 +54,7 @@ header:
         </div>
 
         <!-- Work Item 3 -->
-        <div class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);" >
+        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);" >
             <a href="https://example.com/project-3" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
                     <img src="/assets/images/your-image-3.webp" alt="Project 3">
@@ -89,9 +89,9 @@ header:
 
 <section class="site-section" id="personalbrand">
 
-    <h1>Personal Brand</h1>
+    <h1 data-aos="fade-left">Personal Brand</h1>
 
-    <p style="margin: 2rem 5vw;">
+    <p data-aos="fade-right" style="margin: 2rem 5vw;">
         I’m building something real — and sharing the process.
         From creative projects and client shoots to weekend getaways with friends, workouts, deep talks, and the moments that make life fun — my vlogs show more than just work.
         I document the balance between building a business and actually living.
@@ -100,10 +100,10 @@ header:
     </p>
 
     <div class="video-row">
-        <div class="responsive-video-container">
+        <div data-aos="fade-up" class="responsive-video-container">
             <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="responsive-video-container">
+        <div data-aos="fade-up" class="responsive-video-container">
             <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
@@ -129,14 +129,14 @@ header:
 
 <section class="site-section alternative-color" id="about">
 
-    <h1>About Me</h1>
+    <h1 data-aos="fade-left" >About Me</h1>
 
-    <div class="about-inner">
+    <div data-aos="fade-right" class="about-inner">
         <div class="about-image">
             <img src="/assets/images/felix.webp" alt="Felix Buchwald">
         </div>
 
-        <div class="about-card">
+        <div data-aos="fade-right" class="about-card">
             <p class="intro-line">I’m Felix — a creative mind building brands with soul.</p>
             <p>With a background in content creation and visual storytelling, I help people and places express who they are boldly, clearly, and with style.</p>
             <p>From strategy to shoot, I turn ideas into visuals that stick. Whether it's crafting a brand's voice, directing a product campaign, or filming stories that move, I bring structure to creativity – and energy to every project.</p>
@@ -167,8 +167,8 @@ header:
 
 
 <section class="site-section" id="contact">
-    <h1>Contact</h1>
-    <div class="notice--primary">
+    <h1 data-aos="fade-right" >Contact</h1>
+    <div data-aos="fade-left" class="notice--primary">
         <p style="font-size: 130%">Message me using the form, book a discovery call — or follow along on social.</p>
         <!-- Contact-specific socials -->
         <ul class="contact-socials">
@@ -191,7 +191,7 @@ header:
     </div>
 
 
-    <div class="contact-inner">
+    <div data-aos="fade-up" class="contact-inner">
 
         <!-- Contact Form -->
         <div class="contact-form">
@@ -211,7 +211,7 @@ header:
         </div>
 
         <!-- Calendly Embed -->
-        <div class="calendly-container">
+        <div data-aos="fade-up" class="calendly-container">
             <div class="calendly-inline-widget" data-url="https://calendly.com/per-starke-webdev/15m-discovery-call" style="min-width:320px;height:700px;"></div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         </div>
