--- a/_pages/index.html
+++ b/_pages/index.html
@@ -20,56 +20,39 @@ header:
     <h1>Work</h1>
     <div class="work-grid">
 
-        <!-- Work Item 1 -->
-        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #d5c3a9, #98a5b8);">
-            <a href="https://example.com/project-1" target="_blank" rel="noopener noreferrer nofollow">
+        <!-- AI Campaigns -->
+        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #cf3940, #a37658);">
+            <a href="https://example.com/project-ai" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
-                    <img src="/assets/images/your-image-1.webp" alt="Project 1">
+                    <img src="/assets/images/creative-ai-campaigns.webp" alt="Creative AI Campaigns">
                     <div class="work-image-overlay"></div>
-                    <div class="work-image-title">inBewegung</div>
+                    <div class="work-image-title">Creative AI Campaigns</div>
                 </div>
             </a>
             <div class="work-info">
-                <h3>Visual Rebrand – inBewegung</h3>
-                <p>A bold visual identity rooted in movement and emotion. Full concept, shoot, and edits by me.</p>
+                <h3>Effective and creative AI-campaigns</h3>
+                <p>I use AI as a creative tool to develop visuals, campaigns, and content faster and more effectively. From crafting detailed prompts for image generation to building AI-driven commercials and concept visuals – I combine human storytelling with the power of machine learning. Whether it’s mockups, product shots, or full campaign drafts, I use AI to push creative boundaries while keeping the message clear and human.</p>
             </div>
         </div>
 
-        <!-- Work Item 2 -->
-        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #f7b4a4, #f4d36f);">
-            <a href="https://example.com/project-2" target="_blank" rel="noopener noreferrer nofollow">
+        <!-- Portfolio -->
+        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);">
+            <a href="https://example.com/project-camera" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
-                    <img src="/assets/images/your-image-2.webp" alt="Project 2">
+                    <img src="/assets/images/camera-storytelling.webp" alt="Camera & Storytelling">
                     <div class="work-image-overlay"></div>
-                    <div class="work-image-title">Coaching Space</div>
+                    <div class="work-image-title">Camera & Storytelling</div>
                 </div>
             </a>
             <div class="work-info">
-                <h3>Content Strategy – Coaching Space</h3>
-                <p>Helping a coach connect with their audience through color, clarity, and story-driven video content.</p>
-            </div>
-        </div>
-
-        <!-- Work Item 3 -->
-        <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);" >
-            <a href="https://example.com/project-3" target="_blank" rel="noopener noreferrer nofollow">
-                <div class="work-image-container">
-                    <img src="/assets/images/your-image-3.webp" alt="Project 3">
-                    <div class="work-image-overlay"></div>
-                    <div class="work-image-title">Freiraum</div>
-                </div>
-            </a>
-            <div class="work-info">
-                <h3>Brand Launch – Freiraum</h3>
-                <p>From first shoot to final frames: a new brand presence for an emerging creative studio.</p>
+                <h3>Storytelling using the camera</h3>
+                <p>I use the camera as a storytelling tool to create visuals that connect – emotionally and visually. From directing brand films to capturing product moments or raw street stories, I turn concepts into cinematic content that feels real. Whether it’s commercials, event recaps, or documentary-style pieces, I shoot with intention – always focused on translating brand identity into visual language that resonates.</p>
             </div>
         </div>
 
     </div>
-
     <br><br>
 </section>
-
 
 
 
