--- a/_pages/index.html
+++ b/_pages/index.html
@@ -22,7 +22,7 @@ header:
 
         <!-- AI Campaigns -->
         <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #cf3940, #a37658);">
-            <a href="https://example.com/project-ai" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="/ai-campaigns" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
                     <img src="/assets/images/creative-ai-campaigns.webp" alt="Creative AI Campaigns">
                     <div class="work-image-overlay"></div>
