--- a/_pages/index.html
+++ b/_pages/index.html
@@ -37,7 +37,7 @@ header:
 
         <!-- Portfolio -->
         <div data-aos="fade-up" class="work-item" style="background: linear-gradient(135deg, #efc7ac, #a47359);">
-            <a href="https://example.com/project-camera" target="_blank" rel="noopener noreferrer nofollow">
+            <a href="/camera-projects" target="_blank" rel="noopener noreferrer nofollow">
                 <div class="work-image-container">
                     <img src="/assets/images/camera-storytelling.webp" alt="Camera & Storytelling">
                     <div class="work-image-overlay"></div>
