--- a/_pages/index.html
+++ b/_pages/index.html
@@ -69,28 +69,31 @@ header:
 
 <section class="site-section" id="personalbrand">
 
-    <h1 data-aos="fade-left">Personal Brand</h1>
+    <div class="personal-brand-grid">
 
-    <p data-aos="fade-right" style="margin: 2rem 5vw;">
-        I’m building something real — and sharing the process.
-        From creative projects and client shoots to weekend getaways with friends, workouts, deep talks, and the moments that make life fun — my vlogs show more than just work.
-        I document the balance between building a business and actually living.
-        It’s raw, personal, sometimes chaotic – but always real.
-        Follow along for a look behind the scenes of creative growth, meaningful connections, and a life that’s built with intention.
-    </p>
+        <div class="personal-brand-text" data-aos="fade-right">
+            <h1>Personal Brand</h1>
+            <p>
+                I’m building something real — and sharing the process.
+                From creative projects and client shoots to weekend getaways with friends, workouts, deep talks, and the moments that make life fun — my vlogs show more than just work.
+                I document the balance between building a business and actually living.
+                It’s raw, personal, sometimes chaotic – but always real.
+                Follow along for a look behind the scenes of creative growth, meaningful connections, and a life that’s built with intention.
+            </p>
+        </div>
 
-    <div class="video-row">
-        <div data-aos="fade-up" class="responsive-video-container">
-            <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
+        <div class="video-container" data-aos="fade-left">
+            <div class="responsive-video-container">
+                <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
-        <div data-aos="fade-up" class="responsive-video-container">
-            <iframe src="https://www.youtube-nocookie.com/embed/8nnMlPiWA2s" frameborder="0" allowfullscreen></iframe>
-        </div>
+
     </div>
 
-
+    <br>
 
 </section>
+
 
 
 
@@ -192,7 +195,7 @@ header:
 
         <!-- Calendly Embed -->
         <div data-aos="fade-up" class="calendly-container">
-            <div class="calendly-inline-widget" data-url="https://calendly.com/per-starke-webdev/15m-discovery-call" style="min-width:320px;height:700px;"></div>
+            <div class="calendly-inline-widget" data-url="https://calendly.com/pswd/15m-discovery-call" style="min-width:320px;height:700px;"></div>
             <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         </div>
 
