fix double lightbox

--- a/_pages/ai-projects.html
+++ b/_pages/ai-projects.html
@@ -16,19 +16,20 @@ excerpt: "**Effective and creative <span class='color-text'>AI-campaigns</span>*
         </p>
 
         <div class="gallery-4">
-            <a href="/assets/images/nike/nike-1.webp" data-lightbox="nike" data-title="Nike AI Campaign – Image 1">
+            <a href="/assets/images/nike/nike-1.webp" data-gallery="nike-gallery" data-title="Nike AI Campaign – Image 1">
                 <img src="/assets/images/nike/nike-1.webp" alt="Nike AI Campaign Image 1">
             </a>
-            <a href="/assets/images/nike/nike-2.webp" data-lightbox="nike" data-title="Nike AI Campaign – Image 2">
+            <a href="/assets/images/nike/nike-2.webp" data-gallery="nike-gallery" data-title="Nike AI Campaign – Image 2">
                 <img src="/assets/images/nike/nike-2.webp" alt="Nike AI Campaign Image 2">
             </a>
-            <a href="/assets/images/nike/nike-3.webp" data-lightbox="nike" data-title="Nike AI Campaign – Image 3">
+            <a href="/assets/images/nike/nike-3.webp" data-gallery="nike-gallery" data-title="Nike AI Campaign – Image 3">
                 <img src="/assets/images/nike/nike-3.webp" alt="Nike AI Campaign Image 3">
             </a>
-            <a href="/assets/images/nike/nike-4.webp" data-lightbox="nike" data-title="Nike AI Campaign – Image 4">
+            <a href="/assets/images/nike/nike-4.webp" data-gallery="nike-gallery" data-title="Nike AI Campaign – Image 4">
                 <img src="/assets/images/nike/nike-4.webp" alt="Nike AI Campaign Image 4">
             </a>
         </div>
     </div>
 </section>
+
 
