--- a/_pages/camera-projects.html
+++ b/_pages/camera-projects.html
@@ -21,28 +21,28 @@ excerpt: "**Storytelling using the <span class='color-text'>camera</span>**"
             <a href="/assets/videos/boss/boss-1.mp4"
                class="glightbox"
                data-type="video"
-               data-lightbox="nivea"
+               data-gallery="nivea"
                data-title="Boss – Full Video">
                 <img src="/assets/videos/boss/boss-1-preview.webp" alt="Boss Video Thumbnail">
             </a>
             <a href="/assets/videos/boss/boss-1.mp4"
                class="glightbox"
                data-type="video"
-               data-lightbox="nivea"
+               data-gallery="nivea"
                data-title="Boss – Full Video">
                 <img src="/assets/videos/boss/boss-1-preview.webp" alt="Boss Video Thumbnail">
             </a>
             <a href="/assets/videos/boss/boss-1.mp4"
                class="glightbox"
                data-type="video"
-               data-lightbox="nivea"
+               data-gallery="nivea"
                data-title="Boss – Full Video">
                 <img src="/assets/videos/boss/boss-1-preview.webp" alt="Boss Video Thumbnail">
             </a>
             <a href="/assets/videos/boss/boss-1.mp4"
                class="glightbox"
                data-type="video"
-               data-lightbox="nivea"
+               data-gallery="nivea"
                data-title="Boss – Full Video">
                 <img src="/assets/videos/boss/boss-1-preview.webp" alt="Boss Video Thumbnail">
             </a>
@@ -62,7 +62,7 @@ excerpt: "**Storytelling using the <span class='color-text'>camera</span>**"
             <a href="/assets/videos/boss/boss-1.mp4"
                class="glightbox"
                data-type="video"
-               data-lightbox="boss"
+               data-gallery="boss"
                data-title="Boss – Full Video">
                 <img src="/assets/videos/boss/boss-1-preview.webp" alt="Boss Video Thumbnail">
             </a>
