main style revision done

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -14,19 +14,17 @@ header:
           url: #contact
           blank: false
 
+excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – du bekommst messbare Ergebnisse und entlastest dein Marketing-Team spürbar."
+
 ---
 
 
 
 
-
-
-
-
 <section class="site-section" id="contact">
-    <h1 data-aos="fade-right" >Contact</h1>
+    <h1 data-aos="fade-right" >Call buchen</h1>
     <div data-aos="fade-left" class="notice--primary">
-        <p style="font-size: 130%">Message me using the form, book a discovery call — or follow along on social.</p>
+        <p style="font-size: 130%">Kontaktiere uns über das Formular, buche deinen Call, oder folge uns auf Social Media.</p>
         <!-- Contact-specific socials -->
         <ul class="contact-socials">
             <li>
