--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,12 +6,23 @@ layout: page
 permalink: /
 
 header:
-    overlay_image: /
+    overlay_image: /assets/images/header.webp
+    overlay_filter: rgba(0, 0, 0, 0.6)
+
+    actions:
+      - label: "Let's talk"
+        url: #contact
+        blank: false
+
 
 
 excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – du bekommst messbare Ergebnisse und entlastest dein Marketing-Team spürbar."
 
 ---
+
+
+
+
 
 <section class="site-section" id="work">
 
@@ -41,40 +52,85 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 
 <script>
-    document.addEventListener("DOMContentLoaded", () => {
+    window.addEventListener("load", () => {
+        const colA = document.querySelector(".col-a");
+        const colB = document.querySelector(".col-b");
         const section = document.querySelector(".work-section");
-        const sectionHeight = section.offsetHeight;
-        const sectionTop = section.offsetTop;
-        const scrollTarget = sectionHeight * 0.8; // 80% of section height
 
-        const cols = [
-            { el: document.querySelector(".col-a"), factor: 0.7 }, // slower
-            { el: document.querySelector(".col-b"), factor: 1.3 }, // faster
-            { el: document.querySelector(".col-c"), factor: 0.7 }  // slower
-        ];
+        if (colA && colB && section) {
+            // measure col A height
+            const first = colA.firstElementChild;
+            const last = colA.lastElementChild;
+            const rectFirst = first.getBoundingClientRect();
+            const rectLast = last.getBoundingClientRect();
+            const hA = rectLast.bottom - rectFirst.top;
 
-        // precompute max offsets
-        const settings = cols.map(col => {
-            const colHeight = col.el.scrollHeight;
-            const hidden = colHeight - sectionHeight;
-            const max = hidden * col.factor; // final distance this column must move
-            return { el: col.el, max };
-        });
+            // clip col B
+            colB.style.height = hA + "px";
+            colB.style.overflow = "hidden";
 
-        document.addEventListener("scroll", () => {
-            const scrollY = window.scrollY;
+            // wrap children in col B (preserve gaps)
+            const wrapper = document.createElement("div");
+            wrapper.style.display = "flex";
+            wrapper.style.flexDirection = "column";
+            wrapper.style.gap = "6px";
+            while (colB.firstChild) wrapper.appendChild(colB.firstChild);
+            colB.appendChild(wrapper);
 
-            // progress within the section, normalized to 0–1
-            let progress = (scrollY - sectionTop) / scrollTarget;
-            progress = Math.max(0, Math.min(progress, 1));
+            const hiddenB = wrapper.scrollHeight - hA;
 
-            settings.forEach(cfg => {
-                const offset = -cfg.max * progress;
-                cfg.el.style.transform = `translateY(${offset}px)`;
+            // section metrics
+            const sectionTop = section.getBoundingClientRect().top + window.scrollY;
+
+            // hybrid scroll target
+            let scrollTarget;
+            function setScrollTarget() {
+                if (window.innerWidth <= 1000) {
+                    // mobile: base on viewport height
+                    scrollTarget = window.innerHeight * 0.3;
+                } else {
+                    // desktop: base on colA height
+                    scrollTarget = hA * 0.4;
+                }
+            }
+            setScrollTarget();
+
+            function onScroll() {
+                const y = window.scrollY;
+
+                // detect mobile reliably
+                const isMobile = window.innerWidth <= 1000;
+                // mobile: start a bit earlier
+                const startOffset = isMobile ? window.innerHeight * 0.4 : 0;
+
+                let progress = (y - sectionTop + startOffset) / scrollTarget;
+                progress = Math.max(0, Math.min(progress, 1));
+
+                const offset = -hiddenB * progress;
+                wrapper.style.transform = `translateY(${offset}px)`;
+            }
+
+            window.addEventListener("scroll", onScroll, { passive: true });
+            onScroll();
+
+            // recalc on resize/orientation
+            window.addEventListener("resize", () => {
+                setScrollTarget();
+                onScroll();
             });
-        });
+        }
     });
 </script>
+
+
+
+
+
+
+
+
+
+
 
 
 
