--- a/_pages/index.html
+++ b/_pages/index.html
@@ -142,7 +142,7 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 
 <section class="site-section" id="contact">
-    <h1 data-aos="fade-right" >Call buchen</h1>
+    <h1 data-aos="fade-right" >call buchen</h1>
     <div data-aos="fade-left" class="notice--primary">
         <p style="font-size: 130%">Kontaktiere uns über das Formular, buche deinen Call, oder folge uns auf Social Media.</p>
         <!-- Contact-specific socials -->
