add about section

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -124,6 +124,37 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 
 
+<section class="site-section" id="about">
+    <h1>about</h1>
+    <div class="about-grid">
+        <div class="about-card">
+            <div class="icon">
+                <i class="fas fa-pencil-ruler"></i>
+            </div>
+            <h2>Creative Production</h2>
+            <h3>Von der Idee bis zum fertigen Ad Creative.</h3>
+            <p>Skriptentwicklung, Videodreh & Schnitt – wir liefern dir zielgerichtete Creatives, die direkt für Paid Ads einsatzbereit sind.</p>
+        </div>
+        <div class="about-card">
+            <div class="icon">
+                <i class="fas fa-chart-line"></i>
+            </div>
+            <h2>Performance Marketing</h2>
+            <h3>Wir optimieren nicht nach Bauchgefühl – sondern nach Zahlen.</h3>
+            <p>Wir analysieren die Performance deiner Creatives, testen neue Varianten und entwickeln kontinuierlich neuen Content basierend auf Daten. Ergebnis: Mehr Reichweite, mehr Leads, mehr Umsatz.</p>
+        </div>
+        <div class="about-card">
+            <div class="icon">
+                <i class="fas fa-camera-retro"></i>
+            </div>
+            <h2>Organic Content</h2>
+            <h3>Content, der deiner Marke ein Gesicht gibt.</h3>
+            <p>Wir produzieren hochwertigen organischen Content für deine Kanäle – Reels, Storytelling, Behind-the-Scenes oder Personal Branding. Authentisch, strategisch, nahbar.</p>
+        </div>
+    </div>
+</section>
+
+
 
 
 
