Fix: Logo slider now uses hardcoded image paths for better compatibility

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -177,13 +177,29 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 <div class="logo-slider-container">
     <div class="logo-slider">
-        {% assign logos = site.static_files | where: "image", true | where_exp: "item", "item.path contains '/assets/images/client-logos/'" %}
-        {% for logo in logos %}
-            <img src="{{ logo.path }}" alt="Client Logo">
-        {% endfor %}
-        {% for logo in logos %}
-            <img src="{{ logo.path }}" alt="Client Logo">
-        {% endfor %}
+        <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
+        <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
+        <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
+        <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
+        <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
+        <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
+        <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
+        <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
+        <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
+        <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
+        <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
+        <!-- Duplicate for seamless loop -->
+        <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
+        <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
+        <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
+        <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
+        <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
+        <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
+        <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
+        <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
+        <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
+        <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
+        <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
     </div>
 </div>
 
