--- a/_pages/index.html
+++ b/_pages/index.html
@@ -155,57 +155,50 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<section class="site-section">
+    <h4 style="color:white; margin-top: -1rem;">worked with</h4>
+    <div class="logo-slider-container">
+        <div class="logo-slider">
+            <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
+            <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
+            <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
+            <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
+            <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
+            <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
+            <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
+            <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
+            <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
+            <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
+            <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
+            <!-- Duplicate for seamless loop -->
+            <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
+            <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
+            <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
+            <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
+            <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
+            <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
+            <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
+            <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
+            <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
+            <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
+            <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
         </div>
-    </section>
-
-<div class="logo-slider-container">
-    <div class="logo-slider">
-        <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
-        <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
-        <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
-        <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
-        <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
-        <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
-        <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
-        <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
-        <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
-        <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
-        <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
-        <!-- Duplicate for seamless loop -->
-        <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
-        <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
-        <img src="/assets/images/client-logos/dfb.png" alt="DFB Logo">
-        <img src="/assets/images/client-logos/drei Freunde Wein.png" alt="Drei Freunde Wein Logo">
-        <img src="/assets/images/client-logos/Gorgio Armani .png" alt="Gorgio Armani Logo">
-        <img src="/assets/images/client-logos/Kapten&Son.png" alt="Kapten&Son Logo">
-        <img src="/assets/images/client-logos/Laura Star.png" alt="Laura Star Logo">
-        <img src="/assets/images/client-logos/nivea men.png" alt="Nivea Men Logo">
-        <img src="/assets/images/client-logos/puma.png" alt="Puma Logo">
-        <img src="/assets/images/client-logos/Rosevita Logo.png" alt="Rosevita Logo">
-        <img src="/assets/images/client-logos/Sunglasshut.png" alt="Sunglasshut Logo">
     </div>
-</div>
+
+</section>
+
+<section class="site-section" style="margin-bottom: 1rem;">
+    <h4 style="color:white; margin-top: -1rem;">client voices</h4>
+        <div class="box">
+            <p>FILL ME</p>
+        </div>
+</section>
+
 
 
 
 <section class="site-section" id="contact">
+    <h1 data-aos="fade-up">call buchen</h1>
     <div data-aos="fade-left" class="notice--primary">
         <p style="font-size: 130%">Kontaktiere uns über das Formular, buche deinen Call, oder folge uns auf Social Media.</p>
         <!-- Contact-specific socials -->
