--- a/_pages/index.html
+++ b/_pages/index.html
@@ -233,10 +233,10 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Message</label>
+                <label for="message">Nachricht</label>
                 <textarea id="message" name="message" rows="6" required></textarea>
 
-                <button type="submit">Send Message</button>
+                <button type="submit">Abschicken</button>
             </form>
 
         </div>
