Feat: Implement testimonial section with Swiper.js

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -189,9 +189,42 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 <section class="site-section" style="margin-bottom: 1rem;">
     <h4 style="color:white; margin-top: -1rem;">client voices</h4>
-        <div class="box">
-            <p>FILL ME</p>
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <!-- Testimonial 1 -->
+            <div class="swiper-slide">
+                <div class="testimonial-card">
+                    <p class="testimonial-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
+                    </p>
+                    <p class="testimonial-author">- John Doe</p>
+                    <p class="testimonial-position">CEO, Company A</p>
+                </div>
+            </div>
+            <!-- Testimonial 2 -->
+            <div class="swiper-slide">
+                <div class="testimonial-card">
+                    <p class="testimonial-text">"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    </p>
+                    <p class="testimonial-author">- Jane Smith</p>
+                    <p class="testimonial-position">Marketing Director, Company B</p>
+                </div>
+            </div>
+            <!-- Testimonial 3 -->
+            <div class="swiper-slide">
+                <div class="testimonial-card">
+                    <p class="testimonial-text">"Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+                    </p>
+                    <p class="testimonial-author">- Peter Jones</p>
+                    <p class="testimonial-position">Founder, Company C</p>
+                </div>
+            </div>
         </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Navigation -->
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+    </div>
 </section>
 
 
