Feat: Reposition Swiper navigation arrows below testimonial box

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -219,11 +219,14 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
                 </div>
             </div>
         </div>
-        <!-- Add Pagination -->
-        <div class="swiper-pagination"></div>
-        <!-- Add Navigation -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <!-- Controls Container -->
+        <div class="swiper-controls">
+            <!-- Add Pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Add Navigation -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
     </div>
 </section>
 
