final data aos changes and tests

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -125,9 +125,9 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 
 <section class="site-section" id="about">
-    <h1>about</h1>
+    <h1 data-aos="fade-left">about</h1>
     <div class="about-grid">
-        <div class="about-card">
+        <div class="about-card" data-aos="fade-left">
             <div class="icon">
                 <i class="fas fa-pencil-ruler"></i>
             </div>
@@ -135,7 +135,7 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
             <h3>Von der Idee bis zum fertigen Ad Creative.</h3>
             <p>Skriptentwicklung, Videodreh & Schnitt – wir liefern dir zielgerichtete Creatives, die direkt für Paid Ads einsatzbereit sind.</p>
         </div>
-        <div class="about-card">
+        <div class="about-card" data-aos="fade-up">
             <div class="icon">
                 <i class="fas fa-chart-line"></i>
             </div>
@@ -143,7 +143,7 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
             <h3>Wir optimieren nicht nach Bauchgefühl – sondern nach Zahlen.</h3>
             <p>Wir analysieren die Performance deiner Creatives, testen neue Varianten und entwickeln kontinuierlich neuen Content basierend auf Daten. Ergebnis: Mehr Reichweite, mehr Leads, mehr Umsatz.</p>
         </div>
-        <div class="about-card">
+        <div class="about-card" data-aos="fade-right">
             <div class="icon">
                 <i class="fas fa-camera-retro"></i>
             </div>
@@ -156,8 +156,8 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 
 
 <section class="site-section">
-    <h4 style="color:white; margin-top: -1rem;">worked with</h4>
-    <div class="logo-slider-container">
+    <h4 style="color:white; margin-top: -1rem;" data-aos="fade-up">worked with</h4>
+    <div class="logo-slider-container" data-aos="fade-up">
         <div class="logo-slider">
             <img src="/assets/images/client-logos/Ballerleague.png" alt="Ballerleague Logo">
             <img src="/assets/images/client-logos/Boss.png" alt="Boss Logo">
@@ -188,8 +188,8 @@ excerpt: "Wir übernehmen Content-Produktion, Strategie & Creative-Testing – d
 </section>
 
 <section class="site-section" style="margin-bottom: 1rem;">
-    <h4 style="color:white; margin-top: -1rem;">client voices</h4>
-    <div class="swiper-container">
+    <h4 style="color:white; margin-top: -1rem;" data-aos="fade-up">client voices</h4>
+    <div class="swiper-container" data-aos="fade-left">
         <div class="swiper-wrapper">
             <!-- Testimonial 1 -->
             <div class="swiper-slide">
